<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/xposed_module_updated_notification_*,@string/module_is_not_activated_*">
    <string name="overview">概览</string>
    <string name="Modules">模块</string>
    <plurals name="modules_enabled_count">
        <item quantity="other">已启用 %d 个模块</item>
    </plurals>
    <string name="Logs">日志</string>
    <string name="Settings">设置</string>
    <string name="feedback_or_suggestion">反馈或建议</string>
    <string name="About">关于</string>
    <string name="report_issue">反馈问题</string>
    <string name="module_repo">仓库</string>
    <string name="module_repo_up_to_date">所有模块均已最新</string>
    <string name="module_repo_published_time">发布于 %s</string>
    <string name="module_repo_updated_time">更新于 %s</string>
    <plurals name="module_repo_upgradable">
        <item quantity="other">%d 个模块可更新</item>
    </plurals>
    <string name="about_view_source_code"><![CDATA[在 %1$s 查看源码<br/>加入我们的 %2$s 频道<br/>加入我们的 <b><a href="mqqguild://guild/share?inviteCode=Xz9dJ&from=246610">QQ 频道</a></b>]]></string>
    <string name="translators" comment="Dear translators, please add your home page here following the format. There can be more than one translator. So feel free to append yourself.">LSPosed</string>
    <string name="install">安装</string>
    <string name="install_summary">点击安装 LSPosed</string>
    <string name="not_installed">未安装</string>
    <string name="not_install_summary">LSPosed 未安装</string>
    <string name="activated">已激活</string>
    <string name="partial_activated">部分激活</string>
    <string name="selinux_policy_not_loaded_summary">SEPolicy 未被正确加载</string>
    <string name="selinux_policy_not_loaded"><![CDATA[某些功能将不起作用。<br/>请将此问题报告给 <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> 开发者]]></string>
    <string name="system_inject_fail_summary">系统框架注入失败</string>
    <string name="system_inject_fail"><![CDATA[这是极罕见的情况，可能是由 <b>Magisk</b> 或低质 Magisk 模块导致。<br/>请尝试禁用除 Riru 和 LSPosed 外的其他 Magisk 模块，或向开发者提供完整日志。]]></string>
    <string name="system_prop_incorrect_summary">系统属性异常</string>
    <string name="system_prop_incorrect"><![CDATA[一些必须的系统属性被删除或被修改。<br/>模块可能会随机失效。]]></string>
    <string name="need_update">需要更新</string>
    <string name="please_update_summary">请安装新版 LSPosed</string>
    <string name="developer_warning_title">给模块开发者的提示</string>
    <string name="developer_warning_summary">请在 Android Studio 上禁用部署优化，或使用 `gradlew installDebug` 命令进行安装，否则无法更新模块。</string>
    <string name="info_api_version">API 版本</string>
    <string name="info_framework_version">框架版本</string>
    <string name="info_manager_package_name">管理器包名</string>
    <string name="info_system_version">系统版本</string>
    <string name="info_device">设备</string>
    <string name="info_system_abi">系统架构</string>
    <string name="info_dex2oat_wrapper">Dex 优化器包装</string>
    <string name="enabled">已启用</string>
    <string name="not_enabled">未启用</string>
    <string name="supported">支持</string>
    <string name="unsupported">不支持</string>
    <string name="android_version_unsatisfied">系统版本不受支持</string>
    <string name="crashed">崩溃</string>
    <string name="mount_failed">挂载失败</string>
    <string name="selinux_permissive">SELinux 处于宽容模式</string>
    <string name="sepolicy_incorrect">SELinux 规则异常</string>
    <string name="update_lsposed">更新 LSPosed</string>
    <string name="update_lsposed_msg">确认更新 LSPosed? 设备将会在完成更新后自动重启。</string>
    <string name="info_copied">已复制到剪贴板</string>
    <string name="parasitic_welcome">欢迎使用 LSPosed</string>
    <string name="parasitic_welcome_summary">你正在使用寄生管理器，可创建快捷方式或继续从通知中打开。</string>
    <string name="parasitic_welcome_summary_no_shortcut_support">你正在使用寄生管理器，可以从通知打开它。</string>
    <string name="create_shortcut">创建快捷方式</string>
    <string name="never_show">不再显示</string>
    <string name="app_welcome">推荐使用寄生管理器</string>
    <string name="app_welcome_summary">LSPosed 现在支持系统寄生以避免检测，你可以从通知中打开寄生管理器。建议卸载当前应用。</string>
    <string name="menuSaveToSd">保存</string>
    <string name="nav_item_logs_verbose">详细日志</string>
    <string name="nav_item_logs_module">模块日志</string>
    <string name="logs_saving">正在保存日志，请稍后</string>
    <string name="logs_saved">日志已保存</string>
    <string name="logs_save_failed2">保存失败：\n%s</string>
    <string name="menuClearLog">立即清空日志</string>
    <string name="logs_cleared">成功清空日志。</string>
    <string name="scroll_top">滚动到顶部</string>
    <string name="loading">加载中…</string>
    <string name="scroll_bottom">滚动到底部</string>
    <string name="menuReload">重新加载</string>
    <string name="logs_clear_failed_2">日志清空失败</string>
    <string name="menu_enable_word_wrap">自动换行</string>
    <string name="enabled_verbose_log">详细日志已启用</string>
    <string name="disabled_verbose_log">详细日志已禁用</string>
    <string name="module_empty_description">（未提供介绍）</string>
    <string name="warning_xposed_min_version">此模块需要更新的 Xposed 版本（%d），因此无法激活</string>
    <string name="warning_target_version_higher">此模块是为较新的 Xposed 版本（%d）设计的，因此某些功能可能无法使用</string>
    <string name="no_min_version_specified">该模块未指定所需的 Xposed 版本</string>
    <string name="warning_min_version_too_low">由于该模块开发时所基于 Xposed %1$d 版本不再兼容 %2$d 版本中的变更，该模块现已被停用</string>
    <string name="warning_installed_on_external_storage">此模块因被安装在 SD 卡中而导致无法加载，请将其移动到内部存储</string>
    <string name="module_uninstall">卸载</string>
    <string name="module_settings">模块设置</string>
    <string name="view_in_repo">在仓库中查看</string>
    <string name="module_uninstall_message">确认卸载该模块？</string>
    <string name="module_uninstalled">已卸载 %1$s</string>
    <string name="module_uninstall_failed">卸载失败</string>
    <string name="add_module_to_user">安装模块到用户</string>
    <string name="module_installed">已安装 %1$s 到用户 %2$s</string>
    <string name="module_install_failed">安装失败</string>
    <string name="install_to_user">安装到用户 %s</string>
    <string name="install_to_user_message">确认安装 %1$s 到用户 %2$s？推荐手动用系统自带方法安装，通过 LSPosed 强制安装可能会导致未知异常。</string>
    <string name="expand">展开</string>
    <string name="collapse">收起</string>
    <string name="compile_speed">重新优化</string>
    <string name="compile_speed_msg">优化中…</string>
    <string name="compile_done">优化完成</string>
    <string name="app_launch">启动</string>
    <string name="compile_failed">优化失败：返回值为空</string>
    <string name="compile_failed_with_info">优化失败：</string>
    <string name="sort_by_name">应用名</string>
    <string name="sort_by_package_name">包名</string>
    <string name="sort_by_install_time">安装时间</string>
    <string name="sort_by_update_time">更新时间</string>
    <string name="sort_reverse">倒序</string>
    <string name="menu_show_system_apps">系统应用</string>
    <string name="menu_sort">排序</string>
    <string name="enable_module">启用模块</string>
    <string name="no_scope_selected">未选择任何应用。继续？</string>
    <string name="menu_show_games">游戏</string>
    <string name="menu_show_modules">模块</string>
    <string name="menu_show_denylist">排除列表</string>
    <string name="failed_to_save_scope_list">作用域列表保存失败</string>
    <string name="app_version">版本：%1$s</string>
    <string name="use_recommended">勾选推荐</string>
    <string name="no_scope_selected_has_recommended">未选择任何应用。选择推荐的应用？</string>
    <string name="use_recommended_message">选择推荐的应用？</string>
    <string name="module_is_not_activated_yet">Xposed 模块尚未激活</string>
    <string name="requested_by_module">推荐应用</string>
    <string name="update_available">可用更新：%1$s</string>
    <string name="module_disabled_no_selection">由于未选择任何应用，模块 %s 已被禁用。</string>
    <string name="android_framework">系统框架</string>
    <string name="menu_backup_and_restore">备份</string>
    <string name="menu_backup">备份</string>
    <string name="menu_restore">恢复</string>
    <string name="force_stop">强行停止</string>
    <string name="force_stop_dlg_title">要强行停止吗？</string>
    <string name="force_stop_dlg_text">强行停止某个应用可能会使其异常。</string>
    <string name="reboot_required">重启以应用此更改</string>
    <string name="reboot">重启系统</string>
    <string name="menu_hide">隐藏</string>
    <string name="deny_list">%s 在排除列表内。模块可能会不生效</string>
    <string name="deny_list_info">在排除列表内</string>
    <string name="modules_other_app">在其它应用中查看</string>
    <string name="module_app_info">应用信息</string>
    <string name="list_empty">¯\\\\_(ツ)_\/¯\n空空如也</string>
    <string name="settings_group_framework">框架</string>
    <string name="settings_disable_verbose_log">禁用详细日志</string>
    <string name="settings_disable_verbose_log_summary">报告问题要求包含详细日志</string>
    <string name="pure_black_dark_theme">纯黑主题</string>
    <string name="pure_black_dark_theme_summary">当深色主题启用时使用纯黑主题</string>
    <string name="settings_group_theme">主题</string>
    <string name="settings_backup_and_restore">备份与恢复</string>
    <string name="settings_backup_summery">备份模块列表与作用域列表</string>
    <string name="settings_restore_summery">恢复模块列表与作用域列表</string>
    <string name="settings_backup">备份</string>
    <string name="settings_backup_failed2">备份失败：\n%s</string>
    <string name="enable_documentui">请启用文档应用</string>
    <string name="settings_restore">恢复</string>
    <string name="settings_restore_failed2">恢复失败：\n%s</string>
    <string name="group_network">网络</string>
    <string name="dns_over_http">安全 DNS（DoH）</string>
    <string name="dns_over_http_summary">解决某些地区的 DNS 污染问题</string>
    <string name="theme_color">主题颜色</string>
    <string name="theme_color_system">系统主题色</string>
    <string name="settings_show_hidden_icon_apps_enabled">强制显示桌面图标</string>
    <string name="settings_show_hidden_icon_apps_enabled_summary">在 Android 10 或更高版本，应用不再允许隐藏桌面图标。关闭该选项以关闭该系统功能。</string>
    <string name="settings_group_system">系统</string>
    <string name="settings_language">语言</string>
    <string name="settings_translation_contributors">译者</string>
    <string name="settings_translation">参与翻译</string>
    <string name="settings_translation_summary">帮助我们把 %s 翻译到你的语言</string>
    <string name="settings_create_shortcut_summary">创建一个能打开寄生管理器的快捷方式</string>
    <string name="settings_shortcut_pinned_hint">已创建快捷方式</string>
    <string name="settings_unsupported_pin_shortcut_summary">当前默认桌面不支持固定快捷方式</string>
    <string name="settings_enable_status_notification">状态通知</string>
    <string name="settings_enable_status_notification_summary">显示一个通知以打开寄生管理器</string>
    <string name="disable_status_notification_error">没有快捷方式，无法禁用通知</string>
    <string name="settings_update_channel">模块更新通道</string>
    <string name="update_channel_stable">稳定版</string>
    <string name="update_channel_bate">测试版</string>
    <string name="update_channel_nightly">每夜版</string>
    <string name="settings_xposed_api_call_protection">Xposed API 调用保护</string>
    <string name="settings_xposed_api_call_protection_summary">阻止模块动态加载的代码使用 Xposed API，这会使某些模块失效，但有利于安全性</string>
    <string name="module_readme">自述文件</string>
    <string name="module_releases">版本</string>
    <string name="module_information">信息</string>
    <string name="module_information_homepage">主页</string>
    <string name="module_information_source_url">源码</string>
    <string name="module_information_collaborators">协作者</string>
    <string name="module_release_view_assets">附件</string>
    <string name="menu_open_in_browser">在浏览器中打开</string>
    <string name="module_release_load_more">显示较早版本</string>
    <string name="module_release_no_more">无更多版本</string>
    <string name="repo_load_failed">模块仓库加载失败：%s</string>
    <string name="sort_upgradable_first">可更新优先</string>
    <string name="installed">已安装</string>
    <plurals name="module_release_assets_download_count">
        <item quantity="other">%d 次下载</item>
    </plurals>
    <string name="color_sakura">樱花</string>
    <string name="color_red">红色</string>
    <string name="color_pink">粉色</string>
    <string name="color_purple">紫色</string>
    <string name="color_deep_purple">深紫</string>
    <string name="color_indigo">靛青</string>
    <string name="color_blue">蓝色</string>
    <string name="color_light_blue">浅蓝</string>
    <string name="color_cyan">青色</string>
    <string name="color_teal">青绿</string>
</resources>