<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:showAsAction="ifRoom"
        android:title="@string/menuSaveToSd" />

    <item
        android:id="@+id/menu_scroll_top"
        android:showAsAction="never"
        android:title="@string/scroll_top" />

    <item
        android:id="@+id/menu_scroll_down"
        android:showAsAction="never"
        android:title="@string/scroll_bottom" />

    <item
        android:id="@+id/menu_clear"
        android:showAsAction="never"
        android:title="@string/menuClearLog" />

    <item
        android:id="@+id/menu_word_wrap"
        android:checkable="true"
        android:checked="false"
        android:title="@string/menu_enable_word_wrap" />
</menu>
