<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@android:string/search_go" />

    <item
        android:id="@+id/item_list_sort"
        android:showAsAction="never"
        android:title="@string/menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_sort_by_name"
                    android:checked="true"
                    android:title="@string/sort_by_name" />

                <item
                    android:id="@+id/item_sort_by_update_time"
                    android:title="@string/sort_by_update_time" />
            </group>
            <item
                android:id="@+id/item_upgradable_first"
                android:checkable="true"
                android:title="@string/sort_upgradable_first" />
        </menu>
    </item>
</menu>
