

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_modules"
        android:shortcutId="modules"
        android:shortcutLongLabel="@string/Modules"
        android:shortcutShortLabel="@string/Modules">
        <intent
            android:action="android.intent.action.MAIN"
            android:data="modules"
            android:targetClass="org.mliboot.mlsp.manager.ui.activity.MainActivity"
            android:targetPackage="org.mliboot.mlsp.manager" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_logs"
        android:shortcutId="logs"
        android:shortcutLongLabel="@string/Logs"
        android:shortcutShortLabel="@string/Logs">
        <intent
            android:action="android.intent.action.MAIN"
            android:data="logs"
            android:targetClass="org.mliboot.mlsp.manager.ui.activity.MainActivity"
            android:targetPackage="org.mliboot.mlsp.manager" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_repo"
        android:shortcutId="repo"
        android:shortcutLongLabel="@string/module_repo"
        android:shortcutShortLabel="@string/module_repo">
        <intent
            android:action="android.intent.action.MAIN"
            android:data="repo"
            android:targetClass="org.mliboot.mlsp.manager.ui.activity.MainActivity"
            android:targetPackage="org.mliboot.mlsp.manager" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_settings"
        android:shortcutId="settings"
        android:shortcutLongLabel="@string/Settings"
        android:shortcutShortLabel="@string/Settings">
        <intent
            android:action="android.intent.action.MAIN"
            android:data="settings"
            android:targetClass="org.mliboot.mlsp.manager.ui.activity.MainActivity"
            android:targetPackage="org.mliboot.mlsp.manager" />
    </shortcut>
</shortcuts>
