<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:consumeSystemWindowsInsets="@integer/internal_fragment_insets"
    app:edgeToEdge="true"
    app:fitsSystemWindowsInsets="@integer/internal_fragment_insets">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        app:fitsSystemWindowsInsets="@integer/internal_fragment_top_insets">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:logo="@drawable/ic_launcher_round"
            app:titleMarginStart="@dimen/m3_alert_dialog_icon_margin" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fitsSystemWindowsInsets="@integer/internal_fragment_bottom_insets"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingPrefix">

        <rikka.widget.borderview.BorderNestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:borderBottomVisibility="never"
            app:borderTopDrawable="@null"
            app:borderTopVisibility="whenTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
                android:paddingVertical="?dialogPreferredPadding"
                tools:context=".ui.activity.MainActivity">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/status"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="?colorPrimary"
                    android:outlineSpotShadowColor="?colorPrimary"
                    android:stateListAnimator="@null"
                    app:cardBackgroundColor="?colorPrimary"
                    app:cardElevation="@dimen/home_primary_elevation"
                    app:cardPreventCornerOverlap="false"
                    tools:targetApi="p">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="?dialogPreferredPadding">

                        <ImageView
                            android:id="@+id/status_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:tint="?colorOnPrimary"
                            app:srcCompat="@drawable/ic_round_check_circle_24"
                            tools:ignore="ContentDescription" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/status_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_toEndOf="@id/status_icon"
                            android:fontFamily="sans-serif-medium"
                            android:textAppearance="?textAppearanceTitleMedium"
                            android:textColor="?colorOnPrimary"
                            android:textSize="16sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/status_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/status_title"
                            android:layout_alignStart="@id/status_title"
                            android:textAppearance="?textAppearanceBodyMedium"
                            android:textColor="?colorOnPrimary" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/developer_warning_card"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="?colorSecondaryContainer">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="?dialogPreferredPadding">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/developer_warning_title"
                            android:textAppearance="?textAppearanceTitleMedium"
                            android:textColor="?colorOnSecondaryContainer" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/developer_warning_summary"
                            android:textAppearance="?textAppearanceBodyMedium"
                            android:textColor="?colorOnSecondaryContainer" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/info_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="?dialogPreferredPadding">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_api_version" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/api_version"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_installed" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_xposed_api_call_protection" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/api"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_installed" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_dex2oat_wrapper" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/dex2oat_wrapper"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_installed" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_framework_version" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/framework_version"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_installed" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_manager_package_name" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/manager_package_name"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_system_version" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/system_version"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_device" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/device"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_system_abi" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/system_abi"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="0dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/copy_info"
                                style="?borderlessButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/copy"
                                android:textAlignment="center"
                                android:tooltipText="@string/copy" />
                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </rikka.widget.borderview.BorderNestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
